fix: add missing margin unit

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -169,7 +169,7 @@ h2 {
 }
 
 .leaflet-control-layers {
-  top: 70;
+  top: 70px;
 }
 
 #map-container {
